增加 GetPlaceAndDomain 接口
